# scifit-tracker

./: .gitignore  LICENSE  README.md  analytics_spec.md
apps/scifit-app/: .env  .env.example  .gitignore  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tamagui.config.ts  tsconfig.json
apps/scifit-app/src/app/: App.tsx
apps/scifit-app/src/app/navigation/: types.ts
apps/scifit-app/src/features/auth/: LoginPage.tsx
apps/scifit-app/src/features/coach/: AICameraGuideModal.tsx  AICoachPage.tsx  StickFigureDemo.tsx
apps/scifit-app/src/features/dashboard/: DashboardPage.tsx
apps/scifit-app/src/features/media/: MediaAnalysisPage.tsx
apps/scifit-app/src/features/navigation/: BottomNav.tsx
apps/scifit-app/src/features/profile/: ProfilePage.tsx
apps/scifit-app/src/features/rag/: RagLabPage.tsx
apps/scifit-app/src/features/workout/: WorkoutLogPage.tsx
apps/scifit-app/src/services/: geminiClient.ts  ragClient.ts
apps/scifit-app/src/shared/ui/: atoms.tsx  styles.ts
backend/: .env.example
backend/rag/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/rag/prompts/: output_schema.json  system.md
backend/rag/scripts/: chunk_documents.py  embed_chunks.py  generate_answer.py  parse_pdf_to_text.py  run_pipeline.sh  search_local.py  upload_embeddings_to_supabase.py
backend/rag/sources/: README.md
backend/supabase/functions/media-analysis/: index.ts
backend/supabase/functions/rag-chat/: index.ts
