[project]
name = "scifit-rag"
version = "0.1.0"
description = "SciFit backend RAG ingestion and retrieval scripts"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["backend/rag/tests"]
